; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_get_chapters_count.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_get_chapters_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_title = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_player_get_chapters_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_player_get_chapters_count(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.vlc_player_title*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @vlclua_get_player_internal(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @vlc_player_Lock(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call %struct.vlc_player_title* @vlc_player_GetSelectedTitle(i32* %10)
  store %struct.vlc_player_title* %11, %struct.vlc_player_title** %4, align 8
  %12 = load %struct.vlc_player_title*, %struct.vlc_player_title** %4, align 8
  %13 = icmp ne %struct.vlc_player_title* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load %struct.vlc_player_title*, %struct.vlc_player_title** %4, align 8
  %16 = getelementptr inbounds %struct.vlc_player_title, %struct.vlc_player_title* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  br label %19

18:                                               ; preds = %1
  br label %19

19:                                               ; preds = %18, %14
  %20 = phi i64 [ %17, %14 ], [ 0, %18 ]
  store i64 %20, i64* %5, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @vlc_player_Unlock(i32* %21)
  %23 = load i32*, i32** %2, align 8
  %24 = load i64, i64* %5, align 8
  %25 = call i32 @lua_pushinteger(i32* %23, i64 %24)
  ret i32 1
}

declare dso_local i32* @vlclua_get_player_internal(i32*) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local %struct.vlc_player_title* @vlc_player_GetSelectedTitle(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1

declare dso_local i32 @lua_pushinteger(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
